--- a/references.bib
+++ b/references.bib
@@ -2394,3 +2394,35 @@ doi = {10.1201/9781420072884-c30}
   year={2015}
 }
 
+@article{giorgi2018bivariate,
+  title={Bivariate geostatistical modelling of the relationship between Loa loa prevalence and intensity of infection},
+  author={Giorgi, Emanuele and Schl{\"u}ter, Daniela K and Diggle, Peter J},
+  journal={Environmetrics},
+  volume={29},
+  number={5-6},
+  pages={e2447},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{schluter2016using,
+  title={Using community-level prevalence of Loa loa infection to predict the proportion of highly-infected individuals: statistical modelling to support lymphatic filariasis and onchocerciasis elimination programs},
+  author={Schl{\"u}ter, Daniela K and Ndeffo-Mbah, Martial L and Takougang, Innocent and Ukety, Tony and Wanji, Samuel and Galvani, Alison P and Diggle, Peter J},
+  journal={PLoS neglected tropical diseases},
+  volume={10},
+  number={12},
+  pages={e0005157},
+  year={2016},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{fuglstad2019constructing,
+  title={Constructing priors that penalize the complexity of Gaussian random fields},
+  author={Fuglstad, Geir-Arne and Simpson, Daniel and Lindgren, Finn and Rue, H{\aa}vard},
+  journal={Journal of the American Statistical Association},
+  volume={114},
+  number={525},
+  pages={445--452},
+  year={2019},
+  publisher={Taylor \& Francis}
+}
