--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -907,7 +907,7 @@ The prevalence and suitability log-odds were modelled according to
 \end{align}
 The regression coefficients $\beta_\phi, \beta_\rho$ were given $\mathcal{N}(0, 1000)$ prior distributions.
 Independent Gaussian processes $u(s), v(s)$ were specified with a shared Matern kernel.
-The hyperparameters $\theta = (\sigma, \rho)$ of the kernel were given penalised complexity [@simpson2017penalising; @fuglstad2019constructing] prior distributions with
+The hyperparameters $\boldsymbol{\mathbf{\theta}} = (\sigma, \rho)$ of the kernel were given penalised complexity [@simpson2017penalising; @fuglstad2019constructing] prior distributions with
 \begin{align}
 \mathbb{P}(\sigma < 4) &= 0.975, \\
 \mathbb{P}(\rho < 200\text{km}) &= 0.975.
