--- a/references.bib
+++ b/references.bib
@@ -2426,3 +2426,24 @@ doi = {10.1201/9781420072884-c30}
   year={2019},
   publisher={Taylor \& Francis}
 }
+
+@article{duncan2017spatial,
+  title={Spatial smoothing in Bayesian models: a comparison of weights matrix specifications and their impact on inference},
+  author={Duncan, Earl W and White, Nicole M and Mengersen, Kerrie},
+  journal={International Journal of Health Geographics},
+  volume={16},
+  number={1},
+  pages={1--16},
+  year={2017},
+  publisher={BioMed Central}
+}
+
+@inproceedings{gartner2002multi,
+  title={Multi-instance kernels},
+  author={G{\"a}rtner, Thomas and Flach, Peter A and Kowalczyk, Adam and Smola, Alexander J},
+  booktitle={ICML},
+  volume={2},
+  number={3},
+  pages={7},
+  year={2002}
+}
